--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      <div class="title-container">
+        <img src="assets/logo.png" alt="Risk Calculator" class="title-icon" />
+        <span>Risk Calculator</span>
+      </div>
     </ion-title>
   </ion-toolbar>
 </ion-header>
