--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      <div class="title-container">
+      <div class="flex items-center justify-center">
         <img src="assets/logo.png" alt="Risk Calculator" class="title-icon" />
         <span>Risk Calculator</span>
       </div>
