--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,20 +1,12 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
       <div class="flex items-center justify-center">
         <img src="assets/logo.png" alt="Risk Calculator" class="title-icon" />
         <span>Risk Calculator</span>
       </div>
-    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
   <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
