--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,20 +1,24 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
       <div class="flex items-center justify-center">
         <img src="assets/logo.png" alt="Risk Calculator" class="title-icon" />
         <span>Risk Calculator</span>
       </div>
-    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-list inset="true">
+    <ion-item lines="full">
+        <ion-label class="font-semibold">Settings</ion-label>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>Dark mode</ion-label>
+      <ion-toggle
+        slot="end"
+        [(ngModel)]="is_dark_mode"
+        (ionChange)="set_dark_mode(is_dark_mode)">
+      </ion-toggle>
+    </ion-item>
+  </ion-list>
 </ion-content>
