--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -12,6 +12,7 @@
     <ion-item lines="full">
         <ion-label class="font-semibold">Settings</ion-label>
     </ion-item>
+
     <ion-item lines="full">
       <ion-label>Dark mode</ion-label>
       <ion-toggle
@@ -20,5 +21,17 @@
         (ionChange)="set_dark_mode(is_dark_mode)">
       </ion-toggle>
     </ion-item>
+
+    <!-- Compact item met klikbare waarde rechts -->
+    <ion-item lines="none" class="py-0">
+        <ion-label>Default Leverage</ion-label>
+        <button type="button"
+                slot="end"
+                (click)="openLeverage()"
+                class="px-3 py-1 rounded-lg bg-gray-100 dark:bg-gray-800 text-sm font-semibold">
+            {{ leverage }}<span class="opacity-70">x</span>
+        </button>
+    </ion-item>
+    
   </ion-list>
 </ion-content>
