--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -29,7 +29,7 @@
             slot="end"
             (click)="openCapital()"
             class="bg-gray-100 dark:bg-gray-800 rounded-md text-sm text-right w-auto p-2">
-            {{ formatCurrency(capital) }}
+            {{ formatCurrency(settings.capital) }}
         </button>
     </ion-item>
 
