--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,6 +11,13 @@
       <ion-label>Capital</ion-label>
     </ion-tab-button>
 
+    @if(!settings.isMobile()){
+        <ion-tab-button tab="tabApp" href="/tabs/tabapp">
+        <ion-icon aria-hidden="true" name="analytics"></ion-icon>
+        <ion-label>Application</ion-label>
+        </ion-tab-button>
+    }
+
     <ion-tab-button tab="tab3" href="/tabs/tab3">
       <ion-icon aria-hidden="true" name="cog"></ion-icon>
       <ion-label>Settings</ion-label>
