--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -151,7 +151,7 @@
         </ion-item>
 
         <div class="flex items-center gap-3 mt-0 mb-3 px-2">
-            <ion-button expand="block" class="flex-1" (click)="reset()">+ Log Trade</ion-button>
+            <ion-button expand="block" class="flex-1" (click)="reset()">+ Place Trade</ion-button>
         </div>
     </ion-list>
 
