--- a/src/app/symbol-picker/symbol-picker.page.html
+++ b/src/app/symbol-picker/symbol-picker.page.html
@@ -15,12 +15,12 @@
     </ion-searchbar>
 
     <ion-list *ngIf="!loading">
-        <ion-item 
-            *ngFor="let symbol of filtered" 
-            button
-            (click)="selectSymbol(symbol)">
-            {{ symbol }}
-        </ion-item>
+    <ion-item 
+        *ngFor="let s of filtered" 
+        button
+        (click)="selectSymbol(s)">
+        {{ s.display }}
+    </ion-item>
     </ion-list>
 
     <ion-spinner *ngIf="loading" name="dots"></ion-spinner>
