--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -62,7 +62,7 @@
         </ion-item>
 
         <ion-item lines="full">
-            <ion-label>Auto Apply Recommended Leverage</ion-label>
+            <ion-label>Auto Apply Leverage & Cost</ion-label>
             <ion-toggle
             slot="end"
             [(ngModel)]="settings.apply_recom_leverage"
